--- a/views/pages/band.ejs
+++ b/views/pages/band.ejs
@@ -39,7 +39,7 @@
             <br>
             <h1 class="header center orange-text">Cardápio da Semana</h1>
             <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+                <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
             </div>            
             <br>
         </div>
