--- a/views/pages/band.ejs
+++ b/views/pages/band.ejs
@@ -19,19 +19,27 @@
 </head>
 
 <body>
+    <div id="top-image" class="row center">
+        <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
+    </div>
     <!-- Navigation Bar -->
-    <nav class="light-blue lighten-1" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Bandejão PUC-Rio</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#">Navbar Link</a></li>
+    <nav class="mainColor" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
+            <ul class="left hide-on-med-and-down">
+                <li class="active"><a href="#">Cardápio</a></li>
+                <li><a href="#">Horários</a></li>
+                <li><a href="#">Preços</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
-                <li><a href="#">Navbar Link</a></li>
+                <li class="active"><a href="#">Cardápio</a></li>
+                <li><a href="#">Horários</a></li>
+                <li><a href="#">Preços</a></li>
             </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-
+    
     <!-- Container -->
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
@@ -82,7 +90,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="page-footer light-blue lighten-1">
+    <footer class="page-footer light-blue">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
