nav and footer  in another file

--- a/views/pages/band.ejs
+++ b/views/pages/band.ejs
@@ -23,22 +23,7 @@
         <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
     </div>
     <!-- Navigation Bar -->
-    <nav class="mainColor" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
-            <ul class="left hide-on-med-and-down">
-                <li class="active"><a href="#">Cardápio</a></li>
-                <li><a href="#">Horários</a></li>
-                <li><a href="#">Preços</a></li>
-            </ul>
-            <ul id="nav-mobile" class="side-nav">
-                <li class="active"><a href="#">Cardápio</a></li>
-                <li><a href="#">Horários</a></li>
-                <li><a href="#">Preços</a></li>
-            </ul>
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
+    <% include ../partials/band-nav.ejs %>
     
     <!-- Container -->
     <div class="section no-pad-bot" id="index-banner">
@@ -90,41 +75,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="page-footer light-blue">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Bandejão PUC-Rio</h5>
-                    <p class="grey-text text-lighten-4">Esse site foi idealizado com o intuito de trazer informações mais precisas sobre o cardápio do restaurante
-                        universitário da PUC-Rio.</p>
-
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Connect</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="orange-text text-lighten-3" href="">André Luiz C. A. Reis</a>
-            </div>
-        </div>
-    </footer>
+    <% include ../partials/band-footer.ejs %>
 
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
