Change index.ejs code

--- a/views/partials/band-nav.ejs
+++ b/views/partials/band-nav.ejs
@@ -1,16 +1,19 @@
+<div id="top-image" class="row center">
+    <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
+</div>
 <nav class="mainColor" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
-            <ul class="left hide-on-med-and-down">
-                <li class="active"><a href="#">Cardápio</a></li>
-                <li><a href="#">Horários</a></li>
-                <li><a href="#">Preços</a></li>
-            </ul>
-            <ul id="nav-mobile" class="side-nav">
-                <li class="active"><a href="#">Cardápio</a></li>
-                <li><a href="#">Horários</a></li>
-                <li><a href="#">Preços</a></li>
-            </ul>
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
+    <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
+        <ul class="left hide-on-med-and-down">
+            <li class="active"><a href="#">Cardápio</a></li>
+            <li><a href="#">Horários</a></li>
+            <li><a href="#">Preços</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+            <li class="active"><a href="#">Cardápio</a></li>
+            <li><a href="#">Horários</a></li>
+            <li><a href="#">Preços</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+</nav>
