--- a/views/pages/band.ejs
+++ b/views/pages/band.ejs
@@ -19,67 +19,69 @@
 </head>
 
 <body>
-    <div id="top-image" class="row center">
-        <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
-    </div>
     <!-- Navigation Bar -->
     <% include ../partials/band-nav.ejs %>
-    
-    <!-- Container -->
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center orange-text">Cardápio da Semana</h1>
-            <div class="row center">
-                <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
-            </div>            
-            <br>
-        </div>
-    </div>
 
-    <!-- Cards -->
-    <div class="container">
-        <div class="row">
-            <div class="col l8 offset-l2">
-                <div class="card white darken-1 hoverable">
-                    <div class="card-content black-text">
-                        <span class="card-title">Quarta-feira, 13</span>
-                        <div class="card-title-gap"></div>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas
-                            de frango ao molho escuro e farofa com ovos.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Salada:</span>  Salada de alface, pepino, quiabo temperado e molho rosé.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora cozida e arroz integral.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Massa:</span>  Macarrão parafuso ao molho parisiense ou molho calabresa.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de abóbora.
-                        </p>
-                        <p class="flow-text">
-                            <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja, suco de goiaba, de limão e mate.
-                        </p>
-                    </div>
-                </div>   
+        <!-- Container -->
+        <div class="section no-pad-bot" id="index-banner">
+            <div class="container">
+                <br>
+                <br>
+                <h1 class="header center orange-text">Cardápio da Semana</h1>
+                <div class="row center">
+                    <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
+                </div>
+                <br>
             </div>
         </div>
-    </div>
 
-    <!-- FOOTER -->
-    <% include ../partials/band-footer.ejs %>
+        <!-- Cards -->
+        <div class="container">
+            <div class="row">
+                <div class="col l8 offset-l2">
+                    <div class="card white darken-1 hoverable">
+                        <div class="card-content black-text">
+                            <span class="card-title">Quarta-feira, 13</span>
+                            <div class="card-title-gap"></div>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas de
+                                frango ao molho escuro e farofa com ovos.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Salada:</span> Salada de alface, pepino,
+                                quiabo temperado e molho rosé.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora
+                                cozida e arroz integral.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Massa:</span> Macarrão parafuso ao molho
+                                parisiense ou molho calabresa.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de
+                                abóbora.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja,
+                                suco de goiaba, de limão e mate.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="/js/materialize.js"></script>
+        <!-- FOOTER -->
+        <% include ../partials/band-footer.ejs %>
+
+            <!--Import jQuery before materialize.js-->
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="/js/materialize.js"></script>
 </body>
 
 </html>
