--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <% include ../partials/header.ejs %>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css" media="screen,projection" />
+
+    <!--Import Personal CSS -->
+    <link type="text/css" rel="stylesheet" href="/stylesheets/style.css" media="screen,projection" />
+
+    <title>Bandejão PUC-Rio</title>
 </head>
 
 <body>
+    <!-- Navigation Bar -->
+    <% include ../partials/band-nav.ejs %>
 
-  <% include ../partials/nav.ejs %>
+        <!-- Container -->
+        <div class="section no-pad-bot" id="index-banner">
+            <div class="container">
+                <br>
+                <br>
+                <h1 class="header center orange-text">Cardápio da Semana</h1>
+                <div class="row center">
+                    <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
+                </div>
+                <br>
+            </div>
+        </div>
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
-    </a>
-    <h1>Getting Started with Node on Heroku</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Getting Started with Node</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs" class="alert-link">Getting Started with Node on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/node-js-getting-started">Heroku Button</a> on the repository.</li>
+        <!-- Cards -->
+        <div class="container">
+            <div class="row">
+                <div class="col l8 offset-l2">
+                    <div class="card white darken-1 hoverable">
+                        <div class="card-content black-text">
+                            <span class="card-title">Quarta-feira, 13</span>
+                            <div class="card-title-gap"></div>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas de
+                                frango ao molho escuro e farofa com ovos.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Salada:</span> Salada de alface, pepino,
+                                quiabo temperado e molho rosé.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora
+                                cozida e arroz integral.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Massa:</span> Macarrão parafuso ao molho
+                                parisiense ou molho calabresa.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de
+                                abóbora.
+                            </p>
+                            <p class="flow-text">
+                                <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja,
+                                suco de goiaba, de limão e mate.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <li>When Heroku received the source code, it grabbed all the dependencies in the <a href="https://github.com/heroku/node-js-getting-started/blob/master/package.json">package.json</a>.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-        <li>Check out the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started</a> guide to learn more!</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started with Node on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying Node Apps on Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
-</div>
+        <!-- FOOTER -->
+        <% include ../partials/band-footer.ejs %>
 
-
+            <!--Import jQuery before materialize.js-->
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="/js/materialize.js"></script>
 </body>
 </html>
