New page horarios.

--- a/views/pages/schedules.ejs
+++ b/views/pages/schedules.ejs
@@ -24,10 +24,8 @@
 
         <!-- Container -->
         <div class="section no-pad-bot" id="index-banner">
-            <div class="container">
-                <br>
-                <br>
-                <h1 class="header center orange-text">Cardápio da Semana</h1>
+            <div class="container">                                
+                <h1 class="header center orange-text">Horários</h1>
                 <div class="row center">
                     <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
                 </div>
@@ -83,5 +81,4 @@
             <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script type="text/javascript" src="/js/materialize.js"></script>
 </body>
-
 </html>
