--- a/views/partials/band-footer.ejs
+++ b/views/partials/band-footer.ejs
@@ -1,28 +1,24 @@
 <footer class="page-footer light-blue">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
+            <div class="col l5 s12">
                 <h5 class="white-text">Bandejão PUC-Rio</h5>
                 <p class="grey-text text-lighten-4">Esse site foi idealizado com o intuito de trazer informações mais precisas sobre o cardápio do restaurante
                     universitário da PUC-Rio.</p>
 
-            </div>
-            <div class="col l3 s12">
+            </div>  
+            <div class="col l1"><p></p></div>          
+            <div class="col l3 s12 ">
                 <h5 class="white-text">Settings</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
+                    <li><a class="white-text" href="#!">Administrador</a></li>                    
                 </ul>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Connect</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
+                    <li><a class="white-text" href="https://www.facebook.com/bandejaopucrio">Facebook</a></li>
+                    <li><a class="white-text" href="http://pucurgente.vrc.puc-rio.br">PUC Urgente</a></li>                    
                 </ul>
             </div>
         </div>
