--- a/views/partials/band-nav.ejs
+++ b/views/partials/band-nav.ejs
@@ -5,8 +5,8 @@
     <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
         <ul class="left hide-on-med-and-down">
-            <li class="active"><a href="#">Cardápio</a></li>
-            <li><a href="#">Horários</a></li>
+            <li class="index.ejs"><a href="#">Cardápio</a></li>
+            <li><a href="schecules.ejs">Horários</a></li>
             <li><a href="#">Preços</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
