--- a/views/pages/schedules.ejs
+++ b/views/pages/schedules.ejs
@@ -33,41 +33,33 @@
             </div>
         </div>
 
-        <!-- Cards -->
-        <div class="container">
+        <!-- Main Content -->
+        <div id="main-content" class="container">
             <div class="row">
                 <div class="col l8 offset-l2">
+                    
+                    <!-- Cards -->
                     <div class="card white darken-1 hoverable">
-                        <div class="card-content black-text">
-                            <span class="card-title">Quarta-feira, 13</span>
-                            <div class="card-title-gap"></div>
+                        <div class="card-content black-text">                            
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas de
-                                frango ao molho escuro e farofa com ovos.
+                                <span class="blue-text text-darken-2 card-subtitle">Café da manhã:</span> das 6h30 às 9h.
                             </p>
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Salada:</span> Salada de alface, pepino,
-                                quiabo temperado e molho rosé.
+                                <span class="blue-text text-darken-2 card-subtitle">Almoço:</span> das 10h45 às 14h30.
                             </p>
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora
-                                cozida e arroz integral.
+                                <span class="blue-text text-darken-2 card-subtitle">Lanche:</span> das 18h às 20h.
                             </p>
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
+                                O cardápio do jantar é igual ao do almoço do dia seguinte.
                             </p>
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Massa:</span> Macarrão parafuso ao molho
-                                parisiense ou molho calabresa.
+                                Evite filas. Antecipe a compra do seu tíquete, caixas abertos a partir das 10h.
                             </p>
                             <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de
-                                abóbora.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja,
-                                suco de goiaba, de limão e mate.
-                            </p>
+                                OBS: O cardápio está sujeito a alterações. Informações obtidas através do site
+                                PUC Urgente.
+                            </p>                            
                         </div>
                     </div>
                 </div>
@@ -80,5 +72,6 @@
             <!--Import jQuery before materialize.js-->
             <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script type="text/javascript" src="/js/materialize.js"></script>
+            <script type="text/javascript" src="/js/schedules.js"></script>
 </body>
 </html>
