--- a/views/partials/band-nav.ejs
+++ b/views/partials/band-nav.ejs
@@ -5,14 +5,14 @@
     <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
         <ul class="left hide-on-med-and-down">
-            <li class="active"><a href="./">Cardápio</a></li>
-            <li><a href="/horarios">Horários</a></li>
-            <li><a href="#">Preços</a></li>
+            <li id="nav-cardapio" class=""><a href="./">Cardápio</a></li>
+            <li id="nav-horarios"><a href="/horarios">Horários</a></li>
+            <li id="nav-precos"><a href="/precos">Preços</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-            <li class="active"><a href="/">Cardápio</a></li>
-            <li><a href="/horarios">Horários</a></li>
-            <li><a href="#">Preços</a></li>
+            <li id="nav-cardapio-mobile" class="active"><a href="./">Cardápio</a></li>
+            <li id="nav-horarios-mobile" ><a href="/horarios">Horários</a></li>
+            <li id="nav-precos-mobile" ><a href="/precos">Preços</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
