--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,11 +33,13 @@
             </div>
         </div>
 
-        <!-- Cards -->
-        <div class="container">
+        <!-- Main Content -->
+        <div id="main-content" class="container">
             <div class="row">
                 <div class="col l8 offset-l2">
                     <div class="card white darken-1 hoverable">
+                      
+                      <!-- Cards -->
                         <div class="card-content black-text">
                             <span class="card-title">Quarta-feira, 13</span>
                             <div class="card-title-gap"></div>
@@ -80,5 +82,6 @@
             <!--Import jQuery before materialize.js-->
             <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script type="text/javascript" src="/js/materialize.js"></script>
+            <script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
