--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,86 +2,93 @@
 <html>
 
 <head>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8">
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
 
-    <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css" media="screen,projection" />
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css" media="screen,projection" />
 
-    <!--Import Personal CSS -->
-    <link type="text/css" rel="stylesheet" href="/stylesheets/style.css" media="screen,projection" />
+  <!--Import Personal CSS -->
+  <link type="text/css" rel="stylesheet" href="/stylesheets/style.css" media="screen,projection" />
 
-    <title>Bandejão PUC-Rio</title>
+  <title>Bandejão PUC-Rio</title>
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <% include ../partials/band-nav.ejs %>
+  <!-- Navigation Bar -->
+  <% include ../partials/band-nav.ejs %>
 
-        <!-- Container -->
-        <div class="section no-pad-bot" id="index-banner">
-            <div class="container">                                
-                <h1 class="header center orange-text">Cardápio da Semana</h1>
-                <div class="row center">
-                    <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
-                </div>
-                <br>
-            </div>
+    <!-- Container -->
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <h1 class="header center orange-text">Cardápio da Semana</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
         </div>
+        <br>
+      </div>
+    </div>
 
-        <!-- Main Content -->
-        <div id="main-content" class="container">
-            <div class="row">
-                <div class="col l8 offset-l2">
-                    <div class="card white darken-1 hoverable">
-                      
-                      <!-- Cards -->
-                        <div class="card-content black-text">
-                            <span class="card-title">Quarta-feira, 13</span>
-                            <div class="card-title-gap"></div>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas de
-                                frango ao molho escuro e farofa com ovos.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Salada:</span> Salada de alface, pepino,
-                                quiabo temperado e molho rosé.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora
-                                cozida e arroz integral.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Massa:</span> Macarrão parafuso ao molho
-                                parisiense ou molho calabresa.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de
-                                abóbora.
-                            </p>
-                            <p class="flow-text">
-                                <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja,
-                                suco de goiaba, de limão e mate.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+    <!-- Main Content -->
+    <div id="main-content" class="container">
+      <div class="row">
+        <div class="col l8 offset-l2">
+          <!-- Cards -->
+          <div class="card white darken-1 hoverable">
+            <div class="card-content black-text">
+              <span class="card-title">Quarta-feira, 13</span>
+              <div class="card-title-gap"></div>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Principal:</span> Copa lombo. Iscas de frango ao molho
+                escuro e farofa com ovos.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Salada:</span> Salada de alface, pepino, quiabo temperado
+                e molho rosé.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Healthy:</span> Torta de legumes, abóbora cozida e arroz
+                integral.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Grill:</span> Hambúrguer de carne.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Massa:</span> Macarrão parafuso ao molho parisiense ou
+                molho calabresa.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Sobremesa:</span> Laranja ou doce de abóbora.
+              </p>
+              <p class="flow-text">
+                <span class="blue-text text-darken-2 card-subtitle">Bebida:</span> Suco diet de laranja, suco de goiaba,
+                de limão e mate.
+              </p>
             </div>
+          </div>
+          <div class="card white darken-1 hoverable">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- bandejao -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4077432369980980" data-ad-slot="7139800951" data-ad-format="auto"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
         </div>
+      </div>
+    </div>
 
-        <!-- FOOTER -->
-        <% include ../partials/band-footer.ejs %>
+    <!-- FOOTER -->
+    <% include ../partials/band-footer.ejs %>
 
-            <!--Import jQuery before materialize.js-->
-            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script type="text/javascript" src="/js/materialize.js"></script>
-            <script type="text/javascript" src="/js/index.js"></script>
+      <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="/js/materialize.js"></script>
+      <script type="text/javascript" src="/js/index.js"></script>
 </body>
+
 </html>
