--- a/views/partials/band-nav.ejs
+++ b/views/partials/band-nav.ejs
@@ -6,11 +6,11 @@
         <a id="logo-container" href="#" class="brand-logo center">Bandejão PUC-Rio</a>
         <ul class="left hide-on-med-and-down">
             <li id="nav-cardapio" class=""><a href="./">Cardápio</a></li>
-            <li id="nav-horarios"><a href="/horarios">Horários</a></li>
-            <li id="nav-precos"><a href="/precos">Preços</a></li>
+            <li id="nav-horarios" class=""><a href="/horarios">Horários</a></li>
+            <li id="nav-precos" class=""><a href="/precos">Preços</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-            <li id="nav-cardapio-mobile" class="active"><a href="./">Cardápio</a></li>
+            <li id="nav-cardapio-mobile" class=""><a href="./">Cardápio</a></li>
             <li id="nav-horarios-mobile" ><a href="/horarios">Horários</a></li>
             <li id="nav-precos-mobile" ><a href="/precos">Preços</a></li>
         </ul>
