--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,7 +24,8 @@
 
         <!-- Container -->
         <div class="section no-pad-bot" id="index-banner">
-            <div class="container">                                
+            <div class="container">    
+                <h2 class="header">Flow Text</h2>                            
                 <h1 class="header center orange-text">Cardápio da Semana</h1>
                 <div class="row center">
                     <h5 class="header col s12 light">Restaurante Universitário Sodexo PUC-Rio</h5>
