--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
 <body>
     <!-- Navigation Bar -->
     <% include ../partials/band-nav.ejs %>
-
+        <h2 class="header">Flow Text</h2>
         <!-- Container -->
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
