--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -16,6 +16,7 @@
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css" media="screen,projection" />
 
     <title>Bandejão PUC-Rio</title>
+    <link rel="icon" href="/images/food-dome-128.png">
 </head>
 
 <body>
