--- a/views/partials/band-footer.ejs
+++ b/views/partials/band-footer.ejs
@@ -11,7 +11,7 @@
             <div class="col l3 s12 ">
                 <h5 class="white-text">Settings</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">Administrador</a></li>                    
+                    <li><a class="white-text" href="./config">Administrador</a></li>                    
                 </ul>
             </div>
             <div class="col l3 s12">
