Remove top icon on mobile screen view.

--- a/views/partials/band-nav.ejs
+++ b/views/partials/band-nav.ejs
@@ -1,5 +1,7 @@
-<div id="top-image" class="row center">
-    <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
+<div class="hide-on-med-and-down">
+    <div id="top-image" class="row center">
+        <img src="/images/food_dome_top.png" width="300px" alt="Bandejão" />
+    </div>
 </div>
 <nav class="mainColor" role="navigation">
     <div class="nav-wrapper container">
@@ -11,8 +13,8 @@
         </ul>
         <ul id="nav-mobile" class="side-nav">
             <li id="nav-cardapio-mobile" class=""><a href="./">Cardápio</a></li>
-            <li id="nav-horarios-mobile" ><a href="/horarios">Horários</a></li>
-            <li id="nav-precos-mobile" ><a href="/precos">Preços</a></li>
+            <li id="nav-horarios-mobile"><a href="/horarios">Horários</a></li>
+            <li id="nav-precos-mobile"><a href="/precos">Preços</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
